--- a/css/style.styl
+++ b/css/style.styl
@@ -34,6 +34,14 @@ h3
 	font-family "roboto-l"
 	font-size 15px
 	
+.absolute
+	position absolute !important
+.center-things
+	left 0px
+	right 0px
+	margin-left 0px
+	margin-right 0px
+	
 .navbar 
 	-webkit-transition: all 0.6s ease-out;
 	-moz-transition: all 0.6s ease-out;
@@ -104,12 +112,13 @@ h3
 
 
 #section-first
-	padding-top 80px
+	padding-top 80px 0px
 	color #34495e
 	min-height 100vh
 	background-color $turqoise
 	h1
 		position relative
+		font-family "roboto-l"
 		.glyphicon
 			top 10px
 		.border-bottom
@@ -123,7 +132,9 @@ h3
 			margin-bottom 50px
 			a
 				&:hover
-					text-decoration none	
+					text-decoration none
+			hr
+				border-bottom 1px solid $black
 		.wrapper-circle
 			width 230px
 			height 230px
@@ -143,8 +154,41 @@ h3
 				
 #section-second
 	min-height 100vh
-	background-color #83D6DE
+	background-color #64DDBB
+	padding 80px 0px
+	.row
+		position relative
+		.wrapper-circle2
+			width 230px
+			height 230px
+			border-radius 140px
+			background-color transparent
+			margin 0 auto
+			border 1px solid $black
+			position relative
+			margin-bottom 50px
+			text-align center
+			h4
+				font-family "roboto-b"
+				color $black
+			img
+				margin 0 auto
+				margin-top 34%
+				width 65px
+		.col-md-4
+			position relative
+			.section2-line
+				width 90%
+				background-color $black
+				height 3px
+				position absolute
+				top 110px
+			&:first-child
+				padding-top 40px
+			&:last-child
+				padding-top 40px
 				
+
 @media (max-width: 766px)
 	.navbar
 		height 80px
