--- a/css/style.styl
+++ b/css/style.styl
@@ -155,7 +155,50 @@ h3
 #section-second
 	min-height 100vh
 	background-color #64DDBB
-	padding 80px 0px
+	.second-parallax
+		width 50%
+		min-height 100vh;
+		position relative
+		padding 100px 0px
+		.phone-wrapper
+			width 400px
+			min-height auto
+			margin-left auto
+			margin-right auto
+			position relative
+			.wrapper-box
+				width 400px;
+				position absolute
+				top 300px
+				left 0
+				right 0
+				margin-left auto
+				margin-right auto
+				background-color red
+			.phone-header
+				font-family "roboto-b"
+				font-size 33px
+				position absolute
+				top: 100px;
+				color #3f3f3f
+				left 0px
+				right 0px
+				margin-left auto
+				margin-right auto
+				letter-spacing 2px
+				text-align center
+			.phone
+				position relative
+				top 0
+				z-index 2
+			.phone-bg
+				position absolute
+				top 0
+			img.thumb
+				position absolute
+				top: 430px;
+				width 144px
+				right 6px
 	.row
 		position relative
 		.wrapper-circle2
