--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,57 @@ h3 {
 #section-second {
   min-height: 100vh;
   background-color: #64ddbb;
-  padding: 80px 0px;
+}
+#section-second .second-parallax {
+  width: 50%;
+  min-height: 100vh;
+  position: relative;
+  padding: 100px 0px;
+}
+#section-second .second-parallax .phone-wrapper {
+  width: 400px;
+  min-height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+#section-second .second-parallax .phone-wrapper .wrapper-box {
+  width: 400px;
+  position: absolute;
+  top: 300px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #f00;
+}
+#section-second .second-parallax .phone-wrapper .phone-header {
+  font-family: "roboto-b";
+  font-size: 33px;
+  position: absolute;
+  top: 100px;
+  color: #3f3f3f;
+  left: 0px;
+  right: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 2px;
+  text-align: center;
+}
+#section-second .second-parallax .phone-wrapper .phone {
+  position: relative;
+  top: 0;
+  z-index: 2;
+}
+#section-second .second-parallax .phone-wrapper .phone-bg {
+  position: absolute;
+  top: 0;
+}
+#section-second .second-parallax .phone-wrapper img.thumb {
+  position: absolute;
+  top: 430px;
+  width: 144px;
+  right: 6px;
 }
 #section-second .row {
   position: relative;
