--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,23 @@ h3 {
   margin-right: auto;
   position: relative;
 }
-#section-second .second-parallax .phone-wrapper .wrapper-box {
+#section-second .second-parallax .phone-wrapper .phone {
+  position: relative;
+  top: 0;
+  z-index: 2;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 350px;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .wrapper-box {
   width: 400px;
   position: absolute;
   top: 300px;
@@ -192,7 +208,7 @@ h3 {
   margin-right: auto;
   background-color: #f00;
 }
-#section-second .second-parallax .phone-wrapper .phone-header {
+#section-second .second-parallax .phone-wrapper .screen-wrapper .phone-header {
   font-family: "roboto-b";
   font-size: 33px;
   position: absolute;
@@ -205,16 +221,11 @@ h3 {
   letter-spacing: 2px;
   text-align: center;
 }
-#section-second .second-parallax .phone-wrapper .phone {
-  position: relative;
-  top: 0;
-  z-index: 2;
-}
-#section-second .second-parallax .phone-wrapper .phone-bg {
+#section-second .second-parallax .phone-wrapper .screen-wrapper .phone-bg {
   position: absolute;
   top: 0;
 }
-#section-second .second-parallax .phone-wrapper img.thumb {
+#section-second .second-parallax .phone-wrapper .screen-wrapper img.thumb {
   position: absolute;
   top: 430px;
   width: 144px;
