--- a/css/style.styl
+++ b/css/style.styl
@@ -166,39 +166,48 @@ h3
 			margin-left auto
 			margin-right auto
 			position relative
-			.wrapper-box
-				width 400px;
-				position absolute
-				top 300px
-				left 0
-				right 0
-				margin-left auto
-				margin-right auto
-				background-color red
-			.phone-header
-				font-family "roboto-b"
-				font-size 33px
-				position absolute
-				top: 100px;
-				color #3f3f3f
-				left 0px
-				right 0px
-				margin-left auto
-				margin-right auto
-				letter-spacing 2px
-				text-align center
 			.phone
 				position relative
 				top 0
 				z-index 2
-			.phone-bg
+			.screen-wrapper
 				position absolute
-				top 0
-			img.thumb
-				position absolute
-				top: 430px;
-				width 144px
-				right 6px
+				top: 0;
+				bottom: 0;
+				width 350px
+				.screen-wrapper-abs
+					position relative;
+					top:0
+					left: 0;
+				.wrapper-box
+					width 400px;
+					position absolute
+					top 300px
+					left 0
+					right 0
+					margin-left auto
+					margin-right auto
+					background-color red
+				.phone-header
+					font-family "roboto-b"
+					font-size 33px
+					position absolute
+					top: 100px;
+					color #3f3f3f
+					left 0px
+					right 0px
+					margin-left auto
+					margin-right auto
+					letter-spacing 2px
+					text-align center
+				.phone-bg
+					position absolute
+					top 0
+				img.thumb
+					position absolute
+					top: 430px;
+					width 144px
+					right 6px
 	.row
 		position relative
 		.wrapper-circle2
