--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ h3 {
   width: 50%;
   min-height: 100vh;
   position: relative;
-  padding: 100px 0px;
+  padding: 150px 0px;
 }
 #section-second .second-parallax .phone-wrapper {
   width: 400px;
@@ -189,14 +189,50 @@ h3 {
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper {
   position: absolute;
-  top: 0;
+  top: 106px;
   bottom: 0;
-  width: 350px;
+  left: 20px;
+  width: 366px;
+  height: 524px;
+  overflow: hidden;
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs {
   position: relative;
   top: 0;
   left: 0;
+  height: 100%;
+  background-color: #fff;
+  overflow: hidden;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs > .line {
+  width: 328px;
+  background-image: url("../img/img_divider.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 21px;
+  position: absolute;
+  top: 233px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .wrapper-circle-phone {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  width: 156px;
+  left: 0;
+  right: 0;
+  top: 65px;
+  border: 3px solid #34495e;
+  border-radius: 138px;
+  height: 155px;
+  z-index: 10;
+  text-align: center;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .wrapper-circle-phone > img {
+  width: 151px;
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper .wrapper-box {
   width: 400px;
@@ -212,7 +248,7 @@ h3 {
   font-family: "roboto-b";
   font-size: 33px;
   position: absolute;
-  top: 100px;
+  top: 0;
   color: #3f3f3f;
   left: 0px;
   right: 0px;
@@ -224,12 +260,6 @@ h3 {
 #section-second .second-parallax .phone-wrapper .screen-wrapper .phone-bg {
   position: absolute;
   top: 0;
-}
-#section-second .second-parallax .phone-wrapper .screen-wrapper img.thumb {
-  position: absolute;
-  top: 430px;
-  width: 144px;
-  right: 6px;
 }
 #section-second .row {
   position: relative;
