--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ h3 {
   font-family: "roboto-l";
   font-size: 15px;
 }
+h5 {
+  font-family: "roboto-r";
+  font-size: 18px;
+}
 .absolute {
   position: absolute !important;
 }
@@ -95,7 +99,7 @@ h3 {
 #section-header .border {
   padding: 20px;
   border: 1px solid #fff;
-  width: 700px;
+  width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -167,13 +171,27 @@ h3 {
 }
 #section-second {
   min-height: 100vh;
-  background-color: #64ddbb;
+  background-color: #1abc9c;
+}
+#section-second > .container {
+  position: relative;
+  z-index: -10;
+}
+#section-second #section2-right {
+  background-color: #1abc9c;
+  width: 50%;
+  min-height: 100vh;
+  float: left;
+  padding: 5% 0px;
+  position: relative;
 }
 #section-second .second-parallax {
   width: 50%;
   min-height: 100vh;
   position: relative;
-  padding: 150px 0px;
+  padding: 5% 0px;
+  background-color: #64ddbb;
+  float: left;
 }
 #section-second .second-parallax .phone-wrapper {
   width: 400px;
@@ -233,6 +251,33 @@ h3 {
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .wrapper-circle-phone > img {
   width: 151px;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .information {
+  position: absolute;
+  border: 1px solid #34495e;
+  border-radius: 20px;
+  color: #34495e;
+  width: 90%;
+  height: 180px;
+  margin: 0 5%;
+  bottom: 80px;
+  padding: 10px 3%;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .information .line-div {
+  border-bottom: 1px solid #34495e;
+  height: 1px;
+  margin: 0 15px;
+  width: 90%;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .paging {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 5px 50px 0;
+  z-index: 10;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .paging img {
+  width: 60px;
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper .wrapper-box {
   width: 400px;
