adding page 2 in phone

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ h5 {
   padding-bottom: 10px;
 }
 #section-header h1.header-up {
-  margin-top: 200px;
+  margin-top: 25%;
 }
 #section-first {
   padding-top: 80px 0px;
@@ -135,7 +135,7 @@ h5 {
 #section-first h1 .border-bottom {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 100%;
   border-bottom: 2px solid #34495e;
 }
 #section-first .trio {
@@ -209,14 +209,14 @@ h5 {
   top: 106px;
   bottom: 0;
   left: 20px;
-  width: 366px;
+  width: 362px;
   height: 524px;
   overflow: hidden;
 }
 #section-second .second-parallax .phone-wrapper .phone {
   position: relative;
   top: 0;
-  z-index: 2;
+  z-index: 0;
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper {
   position: absolute;
@@ -251,6 +251,19 @@ h5 {
   left: 0;
   right: 0;
 }
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs > .line2 {
+  width: 328px;
+  background-image: url("../img/img_divider.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 21px;
+  position: absolute;
+  top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
 #section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .wrapper-circle-phone {
   position: absolute;
   margin-left: auto;
@@ -279,7 +292,18 @@ h5 {
   bottom: 80px;
   padding: 10px 3%;
 }
-#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .information .line-div {
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .information2 {
+  position: absolute;
+  border: 1px solid #34495e;
+  border-radius: 20px;
+  color: #34495e;
+  width: 90%;
+  height: 340px;
+  margin: 0 5%;
+  top: 110px;
+  padding: 10px 3%;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .information2 .line-div {
   border-bottom: 1px solid #34495e;
   height: 1px;
   margin: 0 15px;
@@ -290,10 +314,13 @@ h5 {
   bottom: 20px;
   width: 100%;
   padding: 5px 50px 0;
-  z-index: 10;
+  z-index: 99 !important;
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .paging img {
   width: 60px;
+}
+#section-second .second-parallax .phone-wrapper .screen-wrapper .screen-wrapper-abs .paging .arrow-l {
+  margin-right: 50%;
 }
 #section-second .second-parallax .phone-wrapper .screen-wrapper .wrapper-box {
   width: 400px;
